Closed
Bug 975335
Opened 7 years ago
Closed 7 years ago
OdinMonkey: Assertion failure: pt && pt->associatedWith(rt), at vm/Runtime.cpp
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: gkw, Assigned: bhackett1024)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
21.85 KB,
text/plain
|
Details | |
1.39 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
(function(b, foreign, p) { "use asm"; var ff = foreign.f function f(d1) { d1 = +d1 } })() asserts js debug shell on m-c changeset b89a9d7b4ca0 with --fuzzing-safe --no-baseline --no-ion at Assertion failure: pt && pt->associatedWith(rt), at vm/Runtime.cpp My configure flags are: MAKE=mozmake AR=ar sh ./configure --host=x86_64-pc-mingw32 --target=x86_64-pc-mingw32 --enable-optimize --enable-debug --enable-profiling --enable-gczeal --enable-debug-symbols --enable-methodjit --enable-type-inference --disable-tests --enable-more-deterministic --enable-exact-rooting --enable-threadsafe <other NSPR options> Due to broken builds, this issue may go as far back as mid-Jan 2014 (rev 17c463691232), but am unable to bisect further for now: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b528de4b776f&tochange=d54433699f2e
Flags: needinfo?(luke)
Comment 1•7 years ago
|
||
Can't reproduce locally. I've tried with the --fuzzing-safe --no-baseline --no-ion on a x64 Linux shell and a x86 Linux shell. Is this platform and / or OS specific (Win7 x86)?
Flags: needinfo?(gary)
![]() |
||
Comment 2•7 years ago
|
||
The crash seems to be in Windows. Looking at the crash stack, it seems like this is not so much related to Odin as it is to TlsPerThreadData on the js worker threads. I'm suspecting that bug 941805 "broke" this by having WorkerThread.threadData's Runtime be nullptr, which is offending the assert. But this whole assert doesn't seem necessary at all, we should be able to ask whether we are on a runtime's owner thread from any thread. Can we just remove the assertion Brian?
Flags: needinfo?(luke) → needinfo?(bhackett1024)
Assignee | ||
Comment 3•7 years ago
|
||
Sure. This also fixes CurrentThreadCanAccessZone which is similarly afflicted.
Attachment #8379825 -
Flags: review?(luke)
Flags: needinfo?(bhackett1024)
![]() |
||
Comment 4•7 years ago
|
||
Comment on attachment 8379825 [details] [diff] [review] patch Nice
Attachment #8379825 -
Flags: review?(luke) → review+
Assignee | ||
Comment 5•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6d1407d6ec52
![]() |
Reporter | |
Comment 6•7 years ago
|
||
(In reply to Benjamin Bouvier [:bbouvier] from comment #1) > Can't reproduce locally. I've tried with the --fuzzing-safe --no-baseline > --no-ion on a x64 Linux shell and a x86 Linux shell. > Is this platform and / or OS specific (Win7 x86)? Yes, this was Win64 debug shell-specific.
Flags: needinfo?(gary)
https://hg.mozilla.org/mozilla-central/rev/6d1407d6ec52
Assignee: nobody → bhackett1024
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in
before you can comment on or make changes to this bug.
Description
•