Bug 975335 - Allow calling CurrentThreadCanAccess{Runtime,Zone} from any thread, r=luke.